kube/redis-primary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-primary
  name: redis-primary
  namespace: virtualizacao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-primary
  template:
    metadata:
      labels:
        app: redis-primary
    spec:
      containers:
      - image: redis
        name: redis
        command: ["redis-server","--requirepass", "$(REDIS_PASSWORD)"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 256Mi
