kube/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-primary
  name: redis-primary
  namespace: virtualizacao
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-primary
