kube/go-redis-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-redis-app
  name: go-redis-app
  namespace: virtualizacao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-redis-app
  template:
    metadata:
      labels:
        app: go-redis-app
    spec:
      containers:
      - image: go-redis-app:1.0.0
        name: go-redis-app
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: go-redis-app
  name: go-redis-app
  namespace: virtualizacao
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: go-redis-app
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: virtualizacao
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-redis-app
            port:
              number: 8080
